--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js'></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src='https://code.responsivevoice.org/responsivevoice.js'></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.min.js'></script>
+    
 
 </head>
 <body>
@@ -20,15 +19,10 @@
     </div>
     <div class='row' id='mainRow'>
       <div class='col-xs-4' id='host'>
-        <!-- <div class='row' id ='GSH'>
-          <h2><span>Game Show Host</span></h2>
-        </div> -->
-        <!-- <div class='row' id='regisRow'>
-          <div id='IMGcontainer'></div> -->
-        <!-- </div> -->
         <div id='LLandML'>
           <div class='row' id='LLcontainer'></div>
-          <div class='row' id='money-ladder'></div>
+          <div class='row' id='money-ladder'>
+          </div>
         </div>
       </div>
       <div class='col-xs-8 center-block' id='game'>
@@ -51,9 +45,8 @@
   </div>
 </div>
 
-
-<!--<canvas id="myChart" width="400" height="400"></canvas>-->
-
+<script src='https://code.responsivevoice.org/responsivevoice.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.min.js'></script>
 <script src="assets/javascript/chance.min.js"></script>
 <script src="https://www.gstatic.com/firebasejs/4.5.0/firebase.js"></script>
 <script src='assets/javascript/app.js'></script>
