keep working on it

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div>
     </div>
     <div class='row' id='mainRow'>
-      <div class='col-xs-4' id='host'>
+      <div class='col-xs-4' id='info'>
         <div id='LLandML'>
           <div class='row' id='LLcontainer'></div>
           <div class='row' id='money-ladder'>
@@ -38,7 +38,7 @@
           <p class='text-center' id='question'></p>
           <button class='btn center-block btn-lg btn-info hidden' id='startButton'>Start the Game</button>
         </div>
-        <div class='row' id='choices'></div>
+        <div class='row' id='choices-div'></div>
       </div>
     </div>
     <!-- end main row -->
