--- a/upload.html
+++ b/upload.html
@@ -64,7 +64,7 @@
   "difficulty": "Easy"}, 
 
 //medium
-{"question":"The below GIF is a fairly accurate dipiction of debugging in which language?<img src='assets/images/Peter-Griffin'>",
+{"question":"<p>The below GIF is a fairly accurate dipiction of debugging in which language?</p> <img id='Peter-Griffin' src='assets/images/Peter-Griffin.gif'>",
   "choices": ["Javascript", "CSS", "HTML", "Ruby"],
   "answer": "CSS",
   "difficulty": "Medium"},
@@ -110,7 +110,7 @@
   "answer":"return parseInt(x, 10) === x", 
   "difficulty": "Hard"}, 
 
-{"question":"What will the following code output to the console?<pre>var a =5;\nvar b=5;\n(function(){\n &nbsp;&nbsp;var a = b = 3;\n}\n\nconsole.log('a = ', a, ', b = ', b)</pre>",
+{"question":"What will the following code output to the console?<pre>var a =5;\nvar b=5;\n(function(){\n &nbsp;&nbsp;var a = b = 3;\n})()\n\nconsole.log('a = ', a, ', b = ', b)</pre>",
   "choices":["a = 3, b = 3", "a = 5, b = 3", "a = 5, b = 5", "a = 3, b = 5"], 
   "answer":"a = 5, b = 3",
   "difficulty": "Hard"}, 
@@ -127,7 +127,7 @@
 
 {"question":"Which of the following is a common misconception about a hash table?",
   "choices":["Its hashing function encrypts the keys", "At best, it offers constant-time lookup", "At best, it offers constant-time insertion", "It is an unordered data sctructure"], 
-  "answer":"Its hashing function encrypts keys",
+  "answer":  "Its hashing function encrypts the keys",
   "difficulty": "Hard"}
 ];
 
