ready to add last audio and CSS

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class='container-fluid'>
     <div class='row'>
       <div class='col-xs-12 page-header' id='page-header'>
-        <h2><span>Who Wants to be a Javascript Millionaire?</span></h2>
+        <h2 id='title'>Who Wants to be a Javascript Millionaire?</h2>
       </div>
     </div>
     <div class='row' id='mainRow'>
