added boot images

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         <div id='LLandML'>
           <div class='row' id='LLcontainer'></div>
           <div class='row' id='money-ladder'>
+            <h2><span>&nbsp;</span></h2>
+            <img class='boot-image' src='assets/images/Philbin-Regis.jpg'>
           </div>
         </div>
       </div>
@@ -35,6 +37,7 @@
           <div class='qInfoDiv col-xs-4 text-center'><span id='Qdiff'></span></div>
         </div>
         <div class='row text-center' id='qDiv'>
+          <img class='boot-image' src='assets/images/WWTBAM.jpeg'>
           <p class='text-center' id='question'></p>
           <button class='btn center-block btn-lg btn-info hidden' id='startButton'>Start the Game</button>
         </div>
