ready for audio

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <div class='row' id='LLcontainer'></div>
           <div class='row' id='money-ladder'>
             <h2><span>&nbsp;</span></h2>
-            <img class='boot-image' src='assets/images/Philbin-Regis.jpg'>
+            <img class='boot-image' id='regis' src='assets/images/Philbin-Regis.jpg'>
           </div>
         </div>
       </div>
