--- a/upload.html
+++ b/upload.html
@@ -63,6 +63,16 @@
   "answer":"Spam",
   "difficulty": "Easy"}, 
 
+{"question":"The popular Javascript library jQuery provides many useful functions; the short-hand to call many jQuery functions is done by what symbol(s)?", 
+  "choices":["$", "T_T", "♥", "✌"], 
+  "answer":"$",
+  "difficulty": "Easy"},
+
+{"question":"What is the full name of the popular Javascipt library D3?", 
+  "choices":["Diablo 3", "Double-Dash Dave", "Delta Delta Delta", "Data-Driven Documents"], 
+  "answer":"Data-Driven Documents",
+  "difficulty": "Easy"},
+
 //medium
 {"question":"<p>The below GIF is a fairly accurate dipiction of debugging in which language?</p> <img id='Peter-Griffin' src='assets/images/Peter-Griffin.gif'>",
   "choices": ["Javascript", "CSS", "HTML", "Ruby"],
@@ -94,9 +104,19 @@
   "answer": "\<audio>",
   "difficulty": "Medium"}, 
 
+  {"question":"In Javascript, which array method does NOT take a function argument?", 
+  "choices":[".map", ".filter", ".reduce", ".reverse"], 
+  "answer": ".reverse",
+  "difficulty": "Medium"}, 
+
 {"question":"In Javascript, which of the following operator is not a comparison operator?",
   "choices":["=>", "!==", "===", "\<="],
   "answer":"=>",
+  "difficulty": "Medium"}, 
+
+{"question":"Which operator does NOT exist prior to ECMAScript2015/ES6?",
+  "choices":["...", "===", ">>", "&&"],
+  "answer":"...",
   "difficulty": "Medium"}, 
 
 //hard
@@ -126,8 +146,18 @@
   "difficulty": "Hard"},
 
 {"question":"Which of the following is a common misconception about a hash table?",
-  "choices":["Its hashing function encrypts the keys", "At best, it offers constant-time lookup", "At best, it offers constant-time insertion", "It is an unordered data sctructure"], 
+  "choices":["Its hashing function encrypts the keys", "On average, it offers constant-time lookup", "On average, it offers constant-time insertion", "It is an unordered data sctructure"], 
   "answer":  "Its hashing function encrypts the keys",
+  "difficulty": "Hard"},
+
+{"question":"Which of the following Javascript framework can NOT be considered an MVC framework", 
+  "choices":["Meteor.js", "Ember.js", "Angular 2", "Vue.js"], 
+  "answer":"Meteor.js",
+  "difficulty": "Hard"},
+  
+{"question":"Which of the following 4 sorting algorithms is generally faster than the other 3 (Best Big-O complexity)", 
+  "choices":["Merge sort", "Insertion sort", "Bucket sort", "Bubble sort"], 
+  "answer":"Merge sort",
   "difficulty": "Hard"}
 ];
 
