adding final songs

--- a/upload.html
+++ b/upload.html
@@ -23,6 +23,12 @@
 
   var allQuestionsAnswers = [
 //Easy
+
+{"question":"In software engineering, what is the acronym OOP referring to?",
+  "choices": ["Object-Oriented Programming", "Out-of-Print", "Outrageous Office Politics", "Octachlorocamphene-Only Pesticide"], 
+  "answer":"Object-Oriented Programming",
+  "difficulty": "Easy"},
+
 {"question": "Which organization is responsible for standardizing and improving Javascript?", 
   "choices": ["European Computer Manufacturers Association", "The Brogrammers", "AsheleyMadison.com", "The World Of Warcraft Community"], 
   "answer": "European Computer Manufacturers Association",
@@ -34,7 +40,7 @@
   "difficulty": "Easy"},
 
 {"question":"Together with Javascript and CSS, which other language forms the 'three pillars of the Web'?",
-  "choices": ["Klingon", "HyperText Markup Language", "Poor English", "Profanity"],
+  "choices": ["Klingon", "HyperText Markup Language", "poor English", "profanity"],
   "answer":"HyperText Markup Language",
   "difficulty": "Easy"},
 
@@ -44,8 +50,8 @@
   "difficulty": "Easy"},
 
 {"question":"Websites sometimes send small pieces of data to be stored on the user's computer.  What are they called?",
-   "choices":["Cookies", "California rolls", "Cheesy cheeseburger", "Chicken of the Sea"],
-   "answer":"Cookies",
+   "choices":["cookies", "California rolls", "cheesy cheeseburger", "Chicken of the Sea"],
+   "answer":"cookies",
    "difficulty": "Easy"},
 
 {"question":"In software, what is the name commonly given to a malicious softwares disguised as a legitimate software?",
@@ -59,8 +65,8 @@
   "difficulty": "Easy"},
 
 {"question":"In software communication, what is the umbrella term for an unwanted electronic message?",
- "choices": ["Spam", "Dick Pic", "Amway solicitation", "Update to Windows 10 message"],
-  "answer":"Spam",
+ "choices": ["spam", "dick pic", "Amway solicitation", "update to Windows 10 message"],
+  "answer":"spam",
   "difficulty": "Easy"}, 
 
 {"question":"The popular Javascript library jQuery provides many useful functions; the short-hand to call many jQuery functions is done by what symbol(s)?", 
@@ -73,11 +79,21 @@
   "answer":"Data-Driven Documents",
   "difficulty": "Easy"},
 
+{"question":"The popular Javascript run-time environment Node.js runs on the same Javascript engine as what?",
+  "choices": ["Google Chrome's V8", "Ford Mustang's V6", "Microsoft Internet Explorer's Chakra", "James Watt's Steam Engine"], 
+  "answer":"Google Chrome's V8",
+  "difficulty": "Easy"},
+
 //medium
 {"question":"<p>The below GIF is a fairly accurate dipiction of debugging in which language?</p> <img id='Peter-Griffin' src='assets/images/Peter-Griffin.gif'>",
   "choices": ["Javascript", "CSS", "HTML", "Ruby"],
   "answer": "CSS",
   "difficulty": "Medium"},
+
+{"question":"Programs written in plain Javascript without any Javascript framework/libraries is described as written in what?",
+  "choices": ["vanilla Javascript", "mint-chocalate Javascript", "CoffeeScript", "caramel Javascript"], 
+  "answer":"vanilla Javascript",
+  "difficulty": "Medium"}, 
 
 {"question":"In Javascript, which Function method CANNOT be used to manually set context for 'this'?",
   "choices": [".bind", ".call", ".apply", ".toSource"], 
@@ -85,8 +101,8 @@
   "difficulty": "Medium"}, 
 
 {"question":"In Javascript, when you are in the global scope, which technique makes it possible for you to modify a local variable?",
-  "choices":["Closure", "Variable Hoisting", "Callback Hell", "Proper Indentation"],
-  "answer":"Closure",
+  "choices":["closure", "variable hoisting", "callback hell", "proper indentation"],
+  "answer":"closure",
   "difficulty": "Medium"}, 
 
 {"question":"Which of the following Javascript keywords does something significantly different from the other three?", 
@@ -104,7 +120,7 @@
   "answer": "\<audio>",
   "difficulty": "Medium"}, 
 
-  {"question":"In Javascript, which array method does NOT take a function argument?", 
+{"question":"In Javascript, which array method does NOT take a function argument?", 
   "choices":[".map", ".filter", ".reduce", ".reverse"], 
   "answer": ".reverse",
   "difficulty": "Medium"}, 
@@ -146,8 +162,8 @@
   "difficulty": "Hard"},
 
 {"question":"Which of the following is a common misconception about a hash table?",
-  "choices":["Its hashing function encrypts the keys", "On average, it offers constant-time lookup", "On average, it offers constant-time insertion", "It is an unordered data sctructure"], 
-  "answer":  "Its hashing function encrypts the keys",
+  "choices":["its hashing function encrypts the keys", "on average, it offers constant-time lookup", "on average, it offers constant-time insertion", "it is an unordered data sctructure"], 
+  "answer":  "its hashing function encrypts the keys",
   "difficulty": "Hard"},
 
 {"question":"Which of the following Javascript framework can NOT be considered an MVC framework", 
@@ -156,8 +172,8 @@
   "difficulty": "Hard"},
   
 {"question":"Which of the following 4 sorting algorithms is generally faster than the other 3 (Best Big-O complexity)", 
-  "choices":["Merge sort", "Insertion sort", "Bucket sort", "Bubble sort"], 
-  "answer":"Merge sort",
+  "choices":["merge sort", "insertion sort", "bucket sort", "bubble sort"], 
+  "answer":"merge sort",
   "difficulty": "Hard"}
 ];
 
